--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    color: #fff;
+}
 body {
-    background-color:#fff;
+    width: 500px;
     }
 h1 {
-    color:#grey;
+    color:#gray;
     }
 
 
