--- a/style.css
+++ b/style.css
@@ -4,12 +4,19 @@
     box-sizing: border-box;
     color: #000;
 }
+
 body {
-    width: 500px;
-    color: #000;
-    }
+    background-color: #fff;
+}
+
 h1 {
-    color:#696969;
+    color: #696969;
     }
+
+div {
+    margin: auto;
+    width: 500px;
+    padding: 10px;
+}
 
 
