--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: #fff;
+    background-color: #000;
 }
 
 h1 {
@@ -14,6 +14,7 @@ h1 {
     }
 
 div {
+    background-color: #fff;
     margin: auto;
     width: 500px;
     padding: 10px;
