--- a/style.css
+++ b/style.css
@@ -6,14 +6,18 @@
 }
 
 body {
+    padding-top: 10px;
     background-color: #000;
 }
 
 h1 {
+    padding-top: 40px;
+    padding-bottom: 20px;
     color: #696969;
     }
 
 div {
+    font-family: Arial, sans-serif;
     background-color: #fff;
     margin: auto;
     width: 500px;
