--- a/style.css
+++ b/style.css
@@ -11,17 +11,19 @@ body {
 }
 
 h1 {
-    padding-top: 40px;
-    padding-bottom: 20px;
+    alignment: central;
+    padding-top: 30px;
+    padding-bottom: 25px;
     color: #696969;
     }
 
 div {
-    font-family: Arial, sans-serif;
+    font-family: Helvetica, sans-serif;
     background-color: #fff;
     margin: auto;
     width: 500px;
     padding: 10px;
+    border-radius: 25px;
 }
 
 
