--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 h1 {
+    font-family: Verdana, sans-serif;
     alignment: center;
     padding-top: 30px;
     padding-bottom: 25px;
@@ -19,7 +20,7 @@ h1 {
     }
 
 div {
-    font-family: Verdana, sans-serif;
+    font-family: Helvetica, sans-serif;
     background-color: #fff;
     margin: auto;
     width: 500px;
@@ -28,6 +29,10 @@ div {
 }
 
 form {
+    padding-left: 50px;
+}
+
+input {
     padding-left: 20px;
 }
 
