--- a/style.css
+++ b/style.css
@@ -29,11 +29,11 @@ div {
 }
 
 form {
-    padding-left: 50px;
+    padding-left: 75px;
 }
 
 input {
-    padding-left: 20px;
+    margin-left: 100px;
 }
 
 
