--- a/style.css
+++ b/style.css
@@ -37,9 +37,14 @@ form {
 }
 
 #rate {
-    margin-left: 50px;
+    margin-left: 40px;
 }
 
 #years {
-    margin-left: 55px;
+    margin-left: 45px;
+}
+
+button {
+    margin-left: 5px;
+    margin-right: 5px;
 }
