--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ div {
     background-color: #fff;
     margin: auto;
     width: 550px;
+    height: 350px;
     padding: 15px;
     border-radius: 25px;
 }
